--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -93,16 +93,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Copy %282%29 of Program.cs" />
-    <None Include="Copy of Program.cs" />
-    <None Include="Copy %283%29 of Program.cs" />
-    <None Include="Copy %284%29 of Program.cs" />
-    <None Include="Copy %285%29 of Program.cs" />
-    <None Include="Copy %286%29 of Program.cs" />
-    <None Include="Copy %287%29 of Program.cs" />
-    <None Include="Copy %288%29 of Program.cs" />
+    <None Include="Backup\Copy %282%29 of Program.cs" />
+    <None Include="Backup\Copy of Program.cs" />
+    <None Include="Backup\Copy %283%29 of Program.cs" />
+    <None Include="Backup\Copy %284%29 of Program.cs" />
+    <None Include="Backup\Copy %285%29 of Program.cs" />
+    <None Include="Backup\Copy %286%29 of Program.cs" />
+    <None Include="Backup\Copy %287%29 of Program.cs" />
+    <None Include="Backup\Copy %288%29 of Program.cs" />
     <Compile Include="Program.cs" />
-    <None Include="Copy %289%29 of Program.cs" />
+    <None Include="Backup\Copy %289%29 of Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,9 +141,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Backup\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
