--- a/SqlHelper/SLClient/SLClient.csproj
+++ b/SqlHelper/SLClient/SLClient.csproj
@@ -77,6 +77,132 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\DAL\Files\DAL_Class_ColumnEnums_Tables.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_ColumnEnums_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_ColumnEnums_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_ColumnEnums_Views.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_StoredProcedures.cs">
+      <Link>DAL\DAL_Class_Database_StoredProcedures.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_Tables.cs">
+      <Link>DAL\DAL_Class_Database_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_UserDefinedFunctions_Scalar.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedFunctions_Scalar.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Database_Views.cs">
+      <Link>DAL\DAL_Class_Database_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Expressions_Tables.cs">
+      <Link>DAL\DAL_Class_Expressions_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Expressions_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Expressions_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Expressions_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Expressions_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Expressions_Views.cs">
+      <Link>DAL\DAL_Class_Expressions_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Orientations_Tables.cs">
+      <Link>DAL\DAL_Class_Orientations_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Orientations_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Orientations_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Orientations_Views.cs">
+      <Link>DAL\DAL_Class_Orientations_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Orientation_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Orientation_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Queries_Tables.cs">
+      <Link>DAL\DAL_Class_Queries_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Queries_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Queries_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Queries_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Queries_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Class_Queries_Views.cs">
+      <Link>DAL\DAL_Class_Queries_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_ColumnEnums_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_ColumnEnums_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_ColumnEnums_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_ColumnEnums_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Database_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Database_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Database_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Database_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Expressions_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Expressions_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Expressions_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Expressions_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Orientations_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Orientations_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Orientations_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Orientations_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_QueriesTables.cs">
+      <Link>DAL\DAL_Methods_Serial_QueriesTables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Queries_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Queries_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\Files\DAL_Methods_Serial_Queries_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_Views.cs</Link>
+    </Compile>
     <Compile Include="..\SqlHelper\DbSet.cs">
       <Link>SqlLib\DbSet.cs</Link>
     </Compile>
@@ -181,9 +307,7 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
