--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -101,10 +101,11 @@
     <None Include="Backup\Copy %286%29 of Program.cs" />
     <None Include="Backup\Copy %287%29 of Program.cs" />
     <None Include="Backup\Copy %288%29 of Program.cs" />
-    <Compile Include="Step2_Stat.cs" />
-    <Compile Include="Step1_InitData.cs" />
-    <Compile Include="Program.cs" />
+    <None Include="Backup\Step2_Stat.cs" />
+    <None Include="Backup\Step1_InitData.cs" />
+    <None Include="Backup\Program.cs" />
     <None Include="Backup\Copy %289%29 of Program.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
