--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -103,8 +103,9 @@
     <None Include="Backup\Copy %288%29 of Program.cs" />
     <None Include="Backup\Step2_Stat.cs" />
     <None Include="Backup\Step1_InitData.cs" />
-    <None Include="Backup\Program.cs" />
+    <None Include="Backup\Program_.cs" />
     <None Include="Backup\Copy %289%29 of Program.cs" />
+    <None Include="Backup\Program.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
