--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -106,7 +106,8 @@
     <None Include="Backup\Program_.cs" />
     <None Include="Backup\Copy %289%29 of Program.cs" />
     <None Include="Backup\Program.cs" />
-    <Compile Include="Program.cs" />
+    <None Include="Backup\Program__.cs" />
+    <None Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
