--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -107,7 +107,7 @@
     <None Include="Backup\Copy %289%29 of Program.cs" />
     <None Include="Backup\Program.cs" />
     <None Include="Backup\Program__.cs" />
-    <None Include="Program.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
